# doorking-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5
.github/workflows/: build.yml
enclosure/: baseplate-common.scad  baseplate-thingplus.scad  baseplate-xiao.scad
main/: CMakeLists.txt  board.h  config.c  config.h  gate_sm.c  gate_sm.h  http_api.c  http_api.h  i2c_bus.c  i2c_bus.h  log_buffer.c  log_buffer.h  main.c  ota.c  ota.h  relay_i2c.c  relay_i2c.h  reset_btn_sm.c  reset_btn_sm.h  reset_button.c  reset_button.h  status_input.c  status_input.h  status_led.c  status_led.h  wifi.c  wifi.h
scripts/: idf.sh
test/: run_tests.sh  test_gate_sm.c  test_reset_btn_sm.c
