idf_component_register(
    SRCS
        "main.c"
        "gate_sm.c"
        "config.c"
        "wifi.c"
        "reset_btn_sm.c"
        "reset_button.c"
        "log_buffer.c"
        "http_api.c"
        "i2c_bus.c"
        "relay_i2c.c"
        "status_input.c"
        "status_led.c"
        "ota.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        nvs_flash
        esp_timer
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_http_client
        esp_https_ota
        esp-tls
        app_update
        esp_partition
        esp_driver_gpio
        esp_driver_i2c
        mdns
)
